# data-archive-models

./: .envrc  .gitignore  README.md  flake.nix  pom.xml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
ci/: mvn_settings.xml
schemas/data-archive/: Checksum.json  Deposit.json  DepositMetadataFile.json  File.json  Fixity.json  IEMetadataFile.json  IntellectualEntity.json  Producer.json  Representation.json  SIP.json  catalog.json
schemas/data-archive/_shared/: oais_base_defs.json
schemas/data-archive/v0.1/: Deposit.json  File.json  Fixity.json  IntellectualEntity.json  Producer.json  Representation.json  SIP.json
scripts/: generate_mermaid_diagram.py  update_readme.py
src/data_archive/: __init__.py
src/test/resources/: logback-test.xml
