[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-archive-models"
dynamic = ["version"]
description = "ETH Library Data Archive Models - Python Pydantic classes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.0.0"]

[project.urls]
Repository = "https://github.com/eth-library/data-archive-models"

[tool.hatch.build.targets.wheel]
packages = ["src/data_archive"]

[tool.hatch.build.targets.sdist]
include = ["src/data_archive"]

[tool.hatch.version]
source = "env"
variable = "HATCH_VERSION"
default = "0.1.0-dev"

[tool.uv]
dev-dependencies = [
    "datamodel-code-generator[http]>=0.25.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "jsonschema>=4.0.0"
]

# TestPyPI for testing packages
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/test/*"]
