[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-archive-models"
version = "0.1.0"
description = "ETH Library Data Archive Models - Python Pydantic classes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.0.0"]

[project.urls]
Repository = "https://github.com/eth-library/data-archive-models"

[tool.hatch.build.targets.wheel]
packages = ["src/data_archive"]

[tool.hatch.build.targets.sdist]
include = ["src/data_archive"]

[tool.hatch.version]
path = "pyproject.toml"
pattern = "version = \"(?P<version>.+)\""

[tool.uv]
dev-dependencies = [
    "datamodel-code-generator[http]>=0.25.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "jsonschema>=4.0.0"
]

# Index configuration for UV
# This configuration ensures that downstream consumers can resolve to the newest release on TestPyPI
# without needing explicit version pins.

# TestPyPI for all releases
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
# Setting explicit to false allows UV to automatically use this index
explicit = false

# Index mapping to ensure downstream consumers can resolve to the newest release on TestPyPI
[tool.uv.index-map]
# Map the package name to TestPyPI
# This ensures that UV will check TestPyPI when resolving dependencies
"data-archive-models" = ["testpypi"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/test/*"]
